# genes

./: CMakeLists.txt  README.md
cmake/modules/: FindCereal.cmake  FindGenes.cmake
examples/blah/src/: main.cpp
examples/cells/src/: cell.cpp  cell.hpp  cells.cpp  cells.hpp  main.cpp  pi.hpp  texturemap.hpp
include/dna/: allele.hpp  allelechromosomegenerator.hpp  assert.hpp  binarycodec.hpp  breeder.hpp  cerealalleleserializer.hpp  cerealbackend.hpp  chromosome.hpp  chromosomegenerator.hpp  cistron.hpp  gene.hpp  genecodec.hpp  geneconfiguration.hpp  genemanipulator.hpp  genetable.hpp  information.hpp  makeprotein.hpp  protein.hpp  proteinextractor.hpp  randomgene.hpp  randomgenegenerator.hpp  recombinator.hpp
resources/textures/: cell.xcf  field.xcf
src/: breeder.cpp  chromosome.cpp  cistron.cpp  genecodec.cpp  genemanipulator.cpp  information.cpp  randomgene.cpp
test/: alleletest.cpp  binarycodectest.cpp  chromosomegeneratortest.cpp  chromosometest.cpp  cistrontest.cpp  genecodectest.cpp  genemanipulatortest.cpp  proteinextractortest.cpp  proteintest.cpp  randomgenegeneratortest.cpp  recombinatortest.cpp
